fixes for breadcrumb after css and featured-boxes misaligned

--- a/scss/illinois-framework/_block.illinois-framework-theme-breadcrumbs.scss
+++ b/scss/illinois-framework/_block.illinois-framework-theme-breadcrumbs.scss
@@ -7,7 +7,6 @@
   }
 
   ol.breadcrumb {
-    display: inline;
     line-height: 1;
 
     li.breadcrumb-item {
